<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Smart Charger</string>
    <string name="page1">The Button</string>
    <string name="page2">Page 2</string>
    <string name="page3">Page 3</string>
    <string name="action_about">About</string>
    <string name="default_clock">00:00</string>
    <string name="deadline_header">Before: </string>
    <string name="charging_time_header">Hours Needed: </string>
    <string name="default_charging_time">1</string>
    <string name="start_time_header">Starts at: </string>
    <string name="stop_time_header">Stops at: </string>
    <string name="start_time_default">00:00</string>
    <string name="stop_time_default">00:00</string>
</resources>
