

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@color/colorSeparator"
    cardview:cardCornerRadius="2dp"
    cardview:cardElevation="3dp"
    cardview:cardUseCompatPadding="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/root_eco_switch_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimary">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/header_eco_switch_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/eco_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/page1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/eco_button_delete"
                android:src="@drawable/ic_action_delete"
                android:layout_weight="0"
                />
        </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content_eco_switch_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/eco_clock_deadline_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deadline_header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/eco_clock_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_clock"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/eco_charging_time_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/charging_time_header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/eco_charging_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_charging_time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            />

    </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>